[IMP] add Response struct
