# src/controllers/user.go
@@ -19,8 +19,8 @@ import (
 //	@Tags			auth
 //	@Produce		json
 //	@Param			Request Body 	body		schemas.AuthInputData  	true	"Authentication Data"
-//	@Success		200	{object}	schemas.AuthInputData
-//	@Failure		400	{object}	error
+//	@Success		200	{object}	schemas.Response
+//	@Failure		400	{object}	schemas.Response
 //	@Router			/auth/signup [POST]
 //
 // CreateUser creates User record in the database
@@ -30,23 +30,23 @@ func CreateUser(context *gin.Context) {
 
 	// Binding JSON request body to AuthInputData struct
 	if err := context.ShouldBindJSON(&authData); err != nil {
-		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		context.JSON(http.StatusBadRequest, schemas.Response{Status: "error", Message: err.Error()})
 		return
 	}
 
 	// Finding User record with provided Username
 	if err := models.GetUserByUsername(&user, authData.Username); err != nil {
-		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		context.JSON(http.StatusBadRequest, schemas.Response{Status: "error", Message: err.Error()})
 		return
 	}
 	if user.ID != 0 {
-		context.JSON(http.StatusBadRequest, gin.H{"error": "user with provided Username is already used"})
+		context.JSON(http.StatusBadRequest, schemas.Response{Status: "error", Message: "user with provided Username is already used"})
 		return
 	}
 
 	passwordHash, err := bcrypt.GenerateFromPassword([]byte(authData.Password), bcrypt.DefaultCost)
 	if err != nil {
-		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		context.JSON(http.StatusBadRequest, schemas.Response{Status: "error", Message: err.Error()})
 		return
 	}
 
@@ -55,11 +55,11 @@ func CreateUser(context *gin.Context) {
 		Password: string(passwordHash),
 	}
 	if err := models.CreateRecord(&user); err != nil {
-		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		context.JSON(http.StatusBadRequest, schemas.Response{Status: "error", Message: err.Error()})
 	}
 
 	// Create HTTP response
-	context.JSON(http.StatusOK, gin.H{"data": user})
+	context.JSON(http.StatusOK, schemas.Response{Status: "success", Data: user})
 }
 
 // Login godoc
@@ -69,8 +69,8 @@ func CreateUser(context *gin.Context) {
 //	@Tags			auth
 //	@Produce		json
 //	@Param			Request Body 	body		schemas.AuthInputData  	true	"Authentication Data"
-//	@Success		200	{object}	schemas.AuthInputData
-//	@Failure		400	{object}	error
+//	@Success		200	{object}	schemas.Response
+//	@Failure		400	{object}	schemas.Response
 //	@Router			/auth/login [POST]
 //
 // Login authenticates User
@@ -79,17 +79,17 @@ func Login(context *gin.Context) {
 	var user models.User
 
 	if err := context.ShouldBindJSON(&authData); err != nil {
-		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		context.JSON(http.StatusBadRequest, schemas.Response{Status: "error", Message: err.Error()})
 		return
 	}
 
 	if err := models.GetUserByUsername(&user, authData.Username); err != nil {
-		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		context.JSON(http.StatusBadRequest, schemas.Response{Status: "error", Message: err.Error()})
 		return
 	}
 
 	if err := bcrypt.CompareHashAndPassword([]byte(user.Password), []byte(authData.Password)); err != nil {
-		context.JSON(http.StatusBadRequest, gin.H{"error": "invalid password"})
+		context.JSON(http.StatusBadRequest, schemas.Response{Status: "error", Message: "invalid password"})
 		return
 	}
 
@@ -100,11 +100,11 @@ func Login(context *gin.Context) {
 
 	token, err := generatedToken.SignedString([]byte(os.Getenv("JWT_SECRET_KEY")))
 	if err != nil {
-		context.JSON(http.StatusBadRequest, gin.H{"error": "failed to generate token"})
+		context.JSON(http.StatusBadRequest, schemas.Response{Status: "error", Message: "failed to generate token"})
 		return
 	}
 
-	context.JSON(200, gin.H{"token": token})
+	context.JSON(200, schemas.Response{Status: "success", Data: token})
 }
 
 // GetUserProfile godoc
@@ -116,13 +116,13 @@ func Login(context *gin.Context) {
 // @Param Authorization header string true "Insert your access token" default(Bearer <Access token>)
 //
 //	@Produce		json
-//	@Success		200	{object}	models.User
-//	@Failure		400	{object}	error
+//	@Success		200	{object}	schemas.Response
+//	@Failure		400	{object}	schemas.Response
 //	@Router			/auth/user/profile [GET]
 //
 // GetUserProfile provides User data
 func GetUserProfile(c *gin.Context) {
 	user, _ := c.Get("CurrentUser")
 
-	c.JSON(200, gin.H{"user": user})
+	c.JSON(200, schemas.Response{Status: "success", Data: user})
 }
